--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@
 .active {
     color: red;
 }
+.wrap{
+    background: lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
